correction color contrast

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -90,7 +90,7 @@ h2 {
 
 .active {
     color: var(--color-white);
-    background-color: var(--color-4);
+    border: 2px solid var(--color-white);
 }
 
 .gallery {
